[project]
name = "munro"
version = "2.0.0"
description = "League Results. Sorted."
keywords = ['sports', 'leagues', 'scoring', 'results', 'orienteering']
authors = [
  { name = "Ben Brown", email = "9870007+brownben@users.noreply.github.com" },
]
readme = 'README.md'
license = { file = "../LICENSE.md" }
requires-python = ">=3.13, <3.15"

dependencies = [
  # fastapi
  "fastapi~=0.137.1",
  "uvicorn[standard]~=0.49.0",
  "uvloop~=0.22.1; platform_system != 'Windows'",

  # database
  "piccolo==1.34.0",
  "asyncpg~=0.31.0",

  # results file parsing
  "beautifulsoup4~=4.15.0",
  "lxml~=6.1.1",
  "defusedxml~=0.7.1",

  # check firebase auth tokens
  "google-auth~=2.55.0",
  "requests~=2.34",

  "httpx~=0.28.1",    # make requests for results files
  "icalendar~=7.1.3", # generate ical files
]
optional-dependencies.dev = [
  "aiosqlite~=0.22.1",
  "coverage~=7.14.1",
  "mypy~=2.1.0",
  "respx~=0.23.1",
  "ruff~=0.15.17",
  "time-machine~=3.2.0",
  "types-beautifulsoup4~=4.12.0.20250516",
  "types-requests~=2.33",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = [".venv/*", "*/test*", "*/*database_conf.py"]
exclude_lines = ["coverage: ignore"]

[tool.mypy]
strict = true
plugins = "pydantic.mypy"
mypy_path = 'src/types'
files = '**/*.py'
explicit_package_bases = true

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "B904", # Raise inside except
]
per-file-ignores = { "./src/database/*" = ["E712"] }

select = [
  "F",    # Pyflakes
  "E",    # pycodestyle (errors)
  "W",    # pycodestyle (warnings)
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",    # isort
  "PERF", # Performnce
  "RUF",  # Ruff
]
